Tests now demonstrate that Customer implements ExecutiveService.submit(task)